# tabs

./: .gitignore  Cargo.toml  README.md  amazing_grace.gp5  enumerate.txt  witcher.gp5
examples/: audio_playback.rs  cpal.rs  cpal2.rs  cpal3.rs  cpal_audio_in.rs  cpal_audio_out.rs  drums.rs  freq_match.rs  freq_match_guitar.rs  freq_match_using_lib.rs  fret_board.rs  fret_chart.rs  fret_chart_gp.rs  note_by_note.rs  open_gp.rs  plot.rs  realfft.rs  time_stretch.rs
octave/: README.md  freq_match.m  phase_vocoder.m
src/: chart.rs  drums.rs  drums_gui.rs  dsp.rs  fret.rs  fret_chart.rs  fret_chart_view.rs  lib.rs  main.rs  note.rs  spectrum_view.rs
