[package]
name = "tabs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = { version = "0.28.1", features = ["serde"] }
egui_extras = "0.28.1"
egui_plot = "0.28.1"
env_logger = "0.11.5"
# log = { version = "0.4.22", features = ["release_max_level_off"] }
log = { version = "0.4.22" }
splines = { version = "4.3.1" }
